修改布局、字体、颜色，并增加文章

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: Jekyll Doc Theme
-email: your-email@domain.com
+title: Yee's World | 一尘一世界
+email: root@caiyi.me
 description: >
-  Jekyll Template for Project Websites
-  providing documentation and blog post pages.
+  软件工程师，痴迷于计算机的艺术。
+  Software Engineer, Crazy about arts of computer.
 
-baseurl: "/jekyll-doc-theme" # the subpath of your site, e.g. /blog/
-url: https://aksakalli.github.io/jekyll-doc-theme # the base hostname & protocol for your site
-git_address: https://github.com/aksakalli/jekyll-doc-theme
-git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: https://caiyi.me # the base hostname & protocol for your site
+git_address: https://github.com/tsaiyee
+#git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
-bootwatch: paper
+bootwatch: spacelab
 
 # Build settings
 markdown: kramdown
