--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,12 @@ google_analytics: UA-88264578-1
 bootwatch: spacelab
 
 # Build settings
-markdown: kramdown
-highlighter: rouge
+#markdown: kramdown
+#highlighter: rouge
+markdown: redcarpet
+highlighter: pygments
+redcarpet:
+  extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "fenced_code_blocks", "with_toc_data"]
 gems:
   - jekyll-feed
   - jekyll-redirect-from
