--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ bootwatch: spacelab
 
 # Build settings
 #markdown: kramdown
-#highlighter: rouge
 markdown: redcarpet
-highlighter: pygments
+#highlighter: pygments
+highlighter: rouge
 redcarpet:
   extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "fenced_code_blocks", "with_toc_data"]
 gems:
