'redcarpet' Markdown engine, which is no longer supported by GitHub Pages and may cease working at any time.

--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,7 @@ google_analytics: UA-88264578-1
 bootwatch: spacelab
 
 # Build settings
-#markdown: kramdown
-markdown: redcarpet
-#highlighter: pygments
+markdown: kramdown
 highlighter: rouge
 redcarpet:
   extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "fenced_code_blocks", "with_toc_data"]
