--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,15 @@ bootwatch: spacelab
 markdown: kramdown
 highlighter: rouge
 redcarpet:
-  extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "fenced_code_blocks", "with_toc_data"]
+  extensions:
+    [
+      "no_intra_emphasis",
+      "tables",
+      "autolink",
+      "strikethrough",
+      "fenced_code_blocks",
+      "with_toc_data",
+    ]
 gems:
   - jekyll-feed
   - jekyll-redirect-from
@@ -38,21 +46,21 @@ exclude:
   - README.md
 timezone: Asia/Shanghai
 defaults:
-- scope:
-    path: _posts
-    type: posts
-  values:
-    layout: post
-    sectionid: blog
+  - scope:
+      path: _posts
+      type: posts
+    values:
+      layout: post
+      sectionid: blog
 
-- scope:
-    path: _docs
-    type: docs
-  values:
-    layout: docs
-    sectionid: docs
-    seo:
-      type: "WebPage"
+  - scope:
+      path: _docs
+      type: docs
+    values:
+      layout: docs
+      sectionid: docs
+      seo:
+        type: "WebPage"
 
 collections:
   docs:
